# takto

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: styles.css  styles.css.map  styles.scss
src/: main.rs
src/boostrap/: app.rs  hyprland.rs  mod.rs  notification.rs  time.rs  tray.rs
src/components/: button.rs  svg.rs
src/dbus/: systemd.rs
src/ipc/: mod.rs
src/ipc/dbus/: mod.rs  notifications.rs  systemd.rs  tray.rs  utils.rs
src/ipc/socket/: hyprland.rs
src/ipc/socket/hyprland/: event.rs  mod.rs  socket.rs
src/sockets/: hyprland.rs
src/taskbar/: window.rs
src/utils/: config.rs  env.rs  gtk.rs  mod.rs  time.rs
src/widgets/: mod.rs
src/widgets/boot_overlay/: window.rs
src/widgets/common/: notification.rs
src/widgets/notification_popup/: window.rs
src/widgets/taskbar/: boot_menu.rs  clock.rs  mod.rs  notification.rs  os_logo.rs  type.rs  window.rs
src/widgets/taskbar/modules/: boot_menu.rs  clock.rs  mod.rs  notification.rs  os_logo.rs  virtual_desk.rs
src_css/: _colors.scss  styles.scss
src_css/taskbar/: general.scss
