[package]
name = "takto-rs"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "takto-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
chrono = "0.4.41"
gdk4 = { version = "0.9.6", features = ["v4_18"] }
gtk4 = { version = "0.9.6", features = ["v4_18"] }
gtk4-layer-shell = "0.5.0"
serde_yaml = "0.9.34"
serde = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
librsvg = "2.60.0"
cairo-rs = "0.20"
graphene-rs = "0.20.10"
gio = "0.20"
